--- a/index.html
+++ b/index.html
@@ -3,102 +3,99 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Myle Community | Start Your Online Work From Home Journey 💡</title>
-  <meta name="description" content="Myle Community helps students start their online work from home journey. Learn, grow and build income opportunities with real guidance and community support." />
+  <title>Myle Community | Build Your Online Income with Social Media 🌍</title>
+  <meta name="description" content="Learn how thousands of students are building their first online income using social media with the Myle Community. Real guidance. Real growth." />
   <link rel="icon" href="https://i.ibb.co/27S5hrzd/favicon.png" type="image/png" />
-  <meta property="og:title" content="Myle Community | Start Your Online Work From Home Journey 💡" />
-  <meta property="og:description" content="Know how thousands of students are building their first online income from home with Myle Community." />
   <meta property="og:image" content="https://i.ibb.co/d0GWDs92/logo.png" />
-  <meta property="og:url" content="https://mylecommunity.in" />
-  <meta name="twitter:card" content="summary_large_image" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
     *{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:'Poppins',sans-serif;background:#F4F8FC;color:#1B2735;overflow-x:hidden;line-height:1.6;}
+    body{font-family:'Poppins',sans-serif;background:#F6F8FC;color:#1B2735;overflow-x:hidden;}
 
     /* HERO */
     header{
       position:relative;text-align:center;padding:7rem 1.5rem;
-      background:linear-gradient(135deg,#DCECFB,#A7C7E7,#6A93CB);
-      background-size:400% 400%;animation:heroGrad 10s ease infinite;color:#fff
+      background:linear-gradient(135deg,#10131A,#1E2C3C,#283E57);
+      color:#fff;overflow:hidden;
     }
-    @keyframes heroGrad{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-    header::before{
-      content:"";position:absolute;inset:0;z-index:0;
-      background:url('https://i.ibb.co/6cCZwqQ/Thar-Founder.jpg') center/cover no-repeat;opacity:.28
+    header h1{font-size:2.3rem;font-weight:700;margin-bottom:1rem;}
+    header p{font-size:1.05rem;opacity:0.9;max-width:720px;margin:0 auto;}
+    .btn{
+      margin-top:1.8rem;background:#FF6F61;color:#fff;font-weight:600;border:none;
+      padding:.9rem 2rem;border-radius:40px;cursor:pointer;font-size:1rem;transition:.3s;
     }
-    header h1{position:relative;z-index:1;font-size:2.3rem;font-weight:700;text-shadow:0 2px 4px rgba(0,0,0,.18)}
-    header p{position:relative;z-index:1;margin-top:1rem;font-size:1.1rem;opacity:.98}
-    .btn{display:inline-block;margin-top:1.5rem;background:#FF6F61;color:#fff;font-weight:600;border:none;
-      padding:.9rem 2rem;border-radius:40px;cursor:pointer;font-size:1rem;transition:.25s;z-index:2;position:relative;}
-    .btn:hover{background:#FF897E;transform:translateY(-2px)}
+    .btn:hover{background:#FF897E;transform:translateY(-3px);}
+    header::after{
+      content:'';position:absolute;inset:0;
+      background:url('https://i.ibb.co/6cCZwqQ5/Thar-Founder.jpg') center/cover no-repeat;
+      opacity:.12;mix-blend-mode:soft-light;z-index:0;
+    }
 
     /* ABOUT SECTION */
     section.about{
-      background:#fff;padding:4rem 1.5rem;text-align:center;
+      background:#fff;padding:4rem 1.5rem;text-align:center;position:relative;z-index:2;
     }
     .about h2{font-size:2rem;margin-bottom:1.2rem;color:#1B2735;}
     .about p{max-width:850px;margin:0 auto 1.2rem;font-size:1.05rem;color:#333;}
     .about strong{color:#2C5282;}
 
     /* CAROUSEL */
-    .carousel{position:relative;margin:3rem auto;width:min(1100px,92%);border-radius:16px;overflow:hidden;background:#fff;
-      box-shadow:0 8px 24px rgba(0,0,0,.08)}
-    .track{display:flex;transition:transform .7s ease-in-out}
-    .slide{min-width:100%;height:420px;position:relative}
-    .slide img{width:100%;height:100%;object-fit:cover;display:block}
+    .carousel{position:relative;margin:3rem auto;width:min(1100px,92%);border-radius:18px;overflow:hidden;background:#fff;
+      box-shadow:0 8px 28px rgba(0,0,0,.08);}
+    .track{display:flex;transition:transform .7s ease-in-out;}
+    .slide{min-width:100%;height:420px;position:relative;}
+    .slide img{width:100%;height:100%;object-fit:cover;display:block;}
     .cap{position:absolute;left:0;right:0;bottom:0;padding:.7rem 1rem;text-align:center;color:#fff;
-      font-weight:600;text-shadow:0 2px 8px rgba(0,0,0,.5);background:linear-gradient(180deg,rgba(0,0,0,0) 0,rgba(0,0,0,.45) 100%)}
-    .dots{position:absolute;left:0;right:0;bottom:10px;display:flex;gap:8px;justify-content:center}
-    .dot{width:8px;height:8px;border-radius:50%;background:rgba(255,255,255,.55);transition:.2s}
-    .dot.active{background:#FF6F61;transform:scale(1.2)}
-
-    /* TRUST */
-    section.trust{padding:3rem 1.5rem;text-align:center;background:#fff}
-    .trust h2{font-size:1.9rem;margin-bottom:1.4rem}
-    .stats{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:18px;max-width:1100px;margin:0 auto}
-    .stat{background:#fff;border-radius:14px;padding:1.6rem;border:1px solid #eef3f8;box-shadow:0 6px 18px rgba(0,0,0,.06)}
-    .stat h3{color:#2C5282;font-size:1.55rem;margin-bottom:.45rem}
+      font-weight:600;text-shadow:0 2px 8px rgba(0,0,0,.6);
+      background:linear-gradient(180deg,rgba(0,0,0,0) 0,rgba(0,0,0,.55) 100%)}
+    .dots{position:absolute;left:0;right:0;bottom:15px;display:flex;gap:8px;justify-content:center;}
+    .dot{width:8px;height:8px;border-radius:50%;background:rgba(255,255,255,.55);transition:.2s;}
+    .dot.active{background:#FF6F61;transform:scale(1.2);}
 
     /* FAQ */
-    .faq{padding:3rem 1.5rem;background:#F9FBFD;text-align:center;}
+    .faq{padding:4rem 1.5rem;background:#F9FBFD;text-align:center;}
     .faq h2{font-size:1.9rem;margin-bottom:1.5rem;}
     .accordion{max-width:800px;margin:0 auto;text-align:left;}
-    details{background:#fff;margin-bottom:1rem;border-radius:10px;padding:1rem 1.2rem;
-      box-shadow:0 2px 10px rgba(0,0,0,.06);cursor:pointer;}
-    summary{font-weight:600;color:#2C5282;outline:none;}
-    details[open]{background:#f1f6fb;}
-    details p{margin-top:.6rem;font-size:.96rem;color:#333;line-height:1.55;}
+    details{background:#fff;margin-bottom:1rem;border-radius:12px;padding:1.2rem 1.4rem;
+      box-shadow:0 4px 12px rgba(0,0,0,.08);transition:all .4s ease;}
+    summary{font-weight:600;color:#2C5282;outline:none;cursor:pointer;font-size:1.05rem;display:flex;justify-content:space-between;align-items:center;}
+    details[open]{background:#EEF4FB;transform:scale(1.02);}
+    details p{margin-top:.7rem;font-size:.96rem;color:#333;line-height:1.55;opacity:0;max-height:0;transition:all .4s ease;}
+    details[open] p{opacity:1;max-height:300px;}
+    summary::after{content:'+';font-weight:bold;transition:transform .3s ease;}
+    details[open] summary::after{transform:rotate(45deg);}
 
     /* POPUP */
     .popup{display:none;position:fixed;inset:0;background:rgba(0,0,0,.5);backdrop-filter:blur(6px);
-      align-items:center;justify-content:center;z-index:20}
-    .popup.active{display:flex}
-    .box{background:#fff;border-radius:20px;border:3px solid transparent;border-image:linear-gradient(135deg,#A7C7E7,#FF6F61) 1;
-      width:min(520px,92%);overflow:hidden;box-shadow:0 10px 28px rgba(0,0,0,.18)}
-    .box-head{background:linear-gradient(135deg,#A7C7E7,#6A93CB);color:#fff;text-align:center;font-weight:600;padding:1rem}
-    .box iframe{width:100%;height:520px;border:0}
-    .close{position:absolute;top:18px;right:26px;color:#fff;font-size:2rem;cursor:pointer}
+      align-items:center;justify-content:center;z-index:20;}
+    .popup.active{display:flex;}
+    .box{background:#fff;border-radius:20px;border:3px solid transparent;
+      border-image:linear-gradient(135deg,#A7C7E7,#FF6F61) 1;
+      width:min(520px,92%);overflow:hidden;box-shadow:0 10px 28px rgba(0,0,0,.18);}
+    .box-head{background:linear-gradient(135deg,#A7C7E7,#6A93CB);color:#fff;text-align:center;font-weight:600;padding:1rem;}
+    .box iframe{width:100%;height:520px;border:0;}
+    .close{position:absolute;top:18px;right:26px;color:#fff;font-size:2rem;cursor:pointer;}
 
-    footer{margin-top:3rem;text-align:center;background:linear-gradient(135deg,#2C5364,#203A43,#0F2027);color:#eaeef2;padding:2.3rem 1rem}
-    footer a{color:#A7C7E7;text-decoration:none}
-    footer a:hover{text-decoration:underline}
+    footer{margin-top:3rem;text-align:center;background:linear-gradient(135deg,#2C5364,#203A43,#0F2027);
+      color:#eaeef2;padding:2.3rem 1rem;}
+    footer a{color:#A7C7E7;text-decoration:none;}
+    footer a:hover{text-decoration:underline;}
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Start Your Online Work From Home Journey with Myle Community 💡</h1>
-    <p>India’s fastest-growing student community helping young people earn and grow online.</p>
-    <button class="btn" onclick="togglePopup()">Fill the form and we’ll contact you personally 💡</button>
+    <h1>Know How You Can Build Your First Online Income Using Social Media 🌍</h1>
+    <p>Join India’s fastest-growing student community helping young people earn, learn, and grow through online work opportunities.</p>
+    <button class="btn" onclick="togglePopup()">Fill the form & get personal guidance 💡</button>
   </header>
 
   <section class="about">
-    <h2>What This Page Is All About</h2>
-    <p><strong>Myle Community</strong> is a trusted student-based initiative where young people are learning how to start their <strong>online work-from-home journey</strong> — without needing any prior experience or big setup.</p>
-    <p>We guide you on how students like you are building genuine income streams through digital systems, mentorship, and teamwork — all while studying or managing their daily life.</p>
-    <p>It’s not just about earning — it’s about growing skills, confidence, and independence in today’s digital era. Whether you’re in college or just exploring opportunities, this could be your first real step into online income.</p>
-    <button class="btn" onclick="togglePopup()">Get Full Details 💡</button>
+    <h2>How Students Are Earning From Home</h2>
+    <p><strong>Myle Community</strong> is helping students all across India to start <strong>earning online using social media</strong>. We teach how to use your phone, communication, and digital tools to build your first income source — step by step.</p>
+    <p>Everything we do is beginner-friendly. You don’t need followers, technical skills, or prior experience. You’ll get guidance, mentorship, and a community that actually works together to help each other grow.</p>
+    <p>So if you’ve ever wanted to learn how to make money online in a genuine way — this is where it begins.</p>
+    <button class="btn" onclick="togglePopup()">Get Complete Details 💡</button>
   </section>
 
   <section class="carousel">
@@ -111,36 +108,27 @@
     <div class="dots" id="dots"><span class="dot active"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
   </section>
 
-  <section class="trust">
-    <h2>Built by Students. Trusted Across India.</h2>
-    <div class="stats">
-      <div class="stat"><h3>10k+</h3><p>Students have achieved their first online income milestone with Myle.</p></div>
-      <div class="stat"><h3>19+</h3><p>States across India with active learners and growing communities.</p></div>
-      <div class="stat"><h3>Thousands</h3><p>Join every day to explore new ways of digital growth and success.</p></div>
-    </div>
-    <button class="btn" onclick="togglePopup()">Fill this form & get details 💡</button>
-  </section>
-
   <section class="faq">
-    <h2>Frequently Asked Questions</h2>
+    <h2>Got Questions? We’ve Got You Covered 💬</h2>
     <div class="accordion">
       <details>
-        <summary>What is Myle Community?</summary>
-        <p>Myle is a digital community built for students who want to start online work-from-home projects and create income using social media, communication, and marketing systems — all with real guidance.</p>
+        <summary>What exactly is Myle Community?</summary>
+        <p>Myle is a student-led platform that helps you learn how to earn online using social media and modern digital systems — guided by people who’ve already done it.</p>
       </details>
       <details>
-        <summary>Do I need any special skills or background?</summary>
-        <p>No. Most of our students start as complete beginners. We guide you step by step so you can learn and earn at your own pace.</p>
+        <summary>Do I need experience or money to start?</summary>
+        <p>No experience needed. You’ll be guided step-by-step, and everything is explained personally so you can start confidently with clear understanding.</p>
       </details>
       <details>
-        <summary>Is this safe and genuine?</summary>
-        <p>Yes. Myle Community is built around mentorship, verified systems, and transparency. You’ll understand everything clearly before starting — we believe in clarity and trust first.</p>
+        <summary>How will I know if this is real?</summary>
+        <p>Our community is already spread across 19+ states and has helped 10,000+ students achieve their first online income. You’ll see real people, real results, and real systems.</p>
       </details>
       <details>
-        <summary>What happens after I fill the form?</summary>
-        <p>Once you submit the form, our team personally contacts you via call or WhatsApp to explain how everything works and what opportunities fit your schedule best.</p>
+        <summary>What happens after filling the form?</summary>
+        <p>We’ll contact you personally via call or WhatsApp and explain everything step by step — how this works, what’s required, and how to get started easily from your phone or laptop.</p>
       </details>
     </div>
+    <button class="btn" onclick="togglePopup()">Get Started Today 💡</button>
   </section>
 
   <div class="popup" id="popup">
@@ -155,7 +143,6 @@
     <p>Myle Community is a verified digital education initiative.</p>
     <p>Contact: <a href="mailto:support@mylecommunity.in">support@mylecommunity.in</a></p>
     <p><a href="https://www.instagram.com/myle_community/" target="_blank">@myle_community</a> | <a href="https://www.instagram.com/karanveersingh_24/" target="_blank">@karanveersingh_24</a></p>
-    <p><a href="https://mylecommunity.in/privacy" target="_blank">Privacy Policy</a></p>
   </footer>
 
   <script>
