--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Myle Community | Build Your Online Income with Social Media 🌍</title>
   <meta name="description" content="Learn how thousands of students are building their first online income using social media with the Myle Community. Real guidance. Real growth." />
   <link rel="icon" href="https://i.ibb.co/27S5hrzd/favicon.png" type="image/png" />
-  <meta property="og:image" content="https://i.ibb.co/d0GWDs92/logo.png" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
     *{box-sizing:border-box;margin:0;padding:0}
@@ -15,20 +14,21 @@
     /* HERO */
     header{
       position:relative;text-align:center;padding:7rem 1.5rem;
-      background:linear-gradient(135deg,#10131A,#1E2C3C,#283E57);
-      color:#fff;overflow:hidden;
+      background:linear-gradient(135deg,#0E141A,#1A2635,#24384D);
+      color:#fff;overflow:hidden;z-index:1;
     }
-    header h1{font-size:2.3rem;font-weight:700;margin-bottom:1rem;}
-    header p{font-size:1.05rem;opacity:0.9;max-width:720px;margin:0 auto;}
+    header h1{font-size:2.3rem;font-weight:700;margin-bottom:1rem;position:relative;z-index:2;}
+    header p{font-size:1.05rem;opacity:0.9;max-width:720px;margin:0 auto;position:relative;z-index:2;}
     .btn{
       margin-top:1.8rem;background:#FF6F61;color:#fff;font-weight:600;border:none;
       padding:.9rem 2rem;border-radius:40px;cursor:pointer;font-size:1rem;transition:.3s;
+      position:relative;z-index:3;
     }
     .btn:hover{background:#FF897E;transform:translateY(-3px);}
     header::after{
-      content:'';position:absolute;inset:0;
+      content:'';position:absolute;inset:0;z-index:0;
       background:url('https://i.ibb.co/6cCZwqQ5/Thar-Founder.jpg') center/cover no-repeat;
-      opacity:.12;mix-blend-mode:soft-light;z-index:0;
+      opacity:.15;mix-blend-mode:soft-light;
     }
 
     /* ABOUT SECTION */
@@ -43,14 +43,23 @@
     .carousel{position:relative;margin:3rem auto;width:min(1100px,92%);border-radius:18px;overflow:hidden;background:#fff;
       box-shadow:0 8px 28px rgba(0,0,0,.08);}
     .track{display:flex;transition:transform .7s ease-in-out;}
-    .slide{min-width:100%;height:420px;position:relative;}
-    .slide img{width:100%;height:100%;object-fit:cover;display:block;}
+    .slide{min-width:100%;height:440px;position:relative;}
+    .slide img{width:100%;height:100%;object-fit:cover;display:block;image-rendering:auto;}
     .cap{position:absolute;left:0;right:0;bottom:0;padding:.7rem 1rem;text-align:center;color:#fff;
       font-weight:600;text-shadow:0 2px 8px rgba(0,0,0,.6);
       background:linear-gradient(180deg,rgba(0,0,0,0) 0,rgba(0,0,0,.55) 100%)}
     .dots{position:absolute;left:0;right:0;bottom:15px;display:flex;gap:8px;justify-content:center;}
     .dot{width:8px;height:8px;border-radius:50%;background:rgba(255,255,255,.55);transition:.2s;}
     .dot.active{background:#FF6F61;transform:scale(1.2);}
+
+    /* METRICS */
+    .metrics{background:#fff;padding:4rem 1.5rem;text-align:center;}
+    .metrics h2{font-size:1.9rem;margin-bottom:2rem;}
+    .metrics-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:1.8rem;max-width:1000px;margin:0 auto;}
+    .metric{background:#F9FBFD;border-radius:14px;padding:2rem;box-shadow:0 5px 15px rgba(0,0,0,0.08);transition:.3s;}
+    .metric:hover{transform:translateY(-5px);}
+    .metric h3{font-size:2rem;color:#2C5282;margin-bottom:.6rem;}
+    .metric p{font-size:.98rem;color:#333;}
 
     /* FAQ */
     .faq{padding:4rem 1.5rem;background:#F9FBFD;text-align:center;}
@@ -92,20 +101,28 @@
 
   <section class="about">
     <h2>How Students Are Earning From Home</h2>
-    <p><strong>Myle Community</strong> is helping students all across India to start <strong>earning online using social media</strong>. We teach how to use your phone, communication, and digital tools to build your first income source — step by step.</p>
-    <p>Everything we do is beginner-friendly. You don’t need followers, technical skills, or prior experience. You’ll get guidance, mentorship, and a community that actually works together to help each other grow.</p>
-    <p>So if you’ve ever wanted to learn how to make money online in a genuine way — this is where it begins.</p>
+    <p><strong>Myle Community</strong> is helping students across India start <strong>earning online using social media</strong>. We teach you how to use your phone, communication, and digital tools to build your first income source — step by step.</p>
+    <p>Everything we do is beginner-friendly. You don’t need followers, technical skills, or experience. You’ll get mentorship and real people guiding you throughout.</p>
     <button class="btn" onclick="togglePopup()">Get Complete Details 💡</button>
   </section>
 
   <section class="carousel">
     <div class="track" id="track">
-      <div class="slide"><img src="https://i.ibb.co/6cCZwqQ5/Thar-Founder.jpg"><div class="cap">Led by vision. Built with belief. Empowering thousands.</div></div>
-      <div class="slide"><img src="https://i.ibb.co/DDmBJn5m/Community-Meeting.jpg"><div class="cap">Students across India connecting and learning together.</div></div>
-      <div class="slide"><img src="https://i.ibb.co/Zp6j2sMv/Award.jpg"><div class="cap">Recognized for leadership and community excellence.</div></div>
-      <div class="slide"><img src="https://i.ibb.co/vxkRCVx2/Phuket.jpg"><div class="cap">Exploring growth, mentorship, and rewards through teamwork.</div></div>
+      <div class="slide"><img src="https://i.ibb.co/6cCZwqQ5/Thar-Founder.jpg?format=jpg&quality=100"><div class="cap">Led by vision. Built with belief. Empowering thousands.</div></div>
+      <div class="slide"><img src="https://i.ibb.co/DDmBJn5m/Community-Meeting.jpg?format=jpg&quality=100"><div class="cap">Students across India connecting and learning together.</div></div>
+      <div class="slide"><img src="https://i.ibb.co/Zp6j2sMv/Award.jpg?format=jpg&quality=100"><div class="cap">Recognized for leadership and community excellence.</div></div>
+      <div class="slide"><img src="https://i.ibb.co/vxkRCVx2/Phuket.jpg?format=jpg&quality=100"><div class="cap">Exploring growth, mentorship, and rewards through teamwork.</div></div>
     </div>
     <div class="dots" id="dots"><span class="dot active"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
+  </section>
+
+  <section class="metrics">
+    <h2>Our Impact So Far 💼</h2>
+    <div class="metrics-grid">
+      <div class="metric"><h3>10,000+</h3><p>Students achieved their first online income milestone through Myle.</p></div>
+      <div class="metric"><h3>19+</h3><p>States across India with active learners and growing communities.</p></div>
+      <div class="metric"><h3>1,000+</h3><p>New sign-ups every week exploring digital growth and opportunities.</p></div>
+    </div>
   </section>
 
   <section class="faq">
@@ -113,19 +130,19 @@
     <div class="accordion">
       <details>
         <summary>What exactly is Myle Community?</summary>
-        <p>Myle is a student-led platform that helps you learn how to earn online using social media and modern digital systems — guided by people who’ve already done it.</p>
+        <p>Myle is a student-led platform that helps you learn how to earn online using social media and digital systems — guided by people who’ve already done it.</p>
       </details>
       <details>
         <summary>Do I need experience or money to start?</summary>
-        <p>No experience needed. You’ll be guided step-by-step, and everything is explained personally so you can start confidently with clear understanding.</p>
+        <p>No experience needed. You’ll be guided step-by-step, and everything is explained personally so you can start confidently with full clarity.</p>
       </details>
       <details>
         <summary>How will I know if this is real?</summary>
-        <p>Our community is already spread across 19+ states and has helped 10,000+ students achieve their first online income. You’ll see real people, real results, and real systems.</p>
+        <p>Our community is already spread across 19+ states and has helped 10,000+ students achieve their first online income. You’ll see real people and real results.</p>
       </details>
       <details>
         <summary>What happens after filling the form?</summary>
-        <p>We’ll contact you personally via call or WhatsApp and explain everything step by step — how this works, what’s required, and how to get started easily from your phone or laptop.</p>
+        <p>We’ll contact you personally via call or WhatsApp and explain everything — how it works, what’s required, and how to start easily from your phone.</p>
       </details>
     </div>
     <button class="btn" onclick="togglePopup()">Get Started Today 💡</button>
