--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>Myle Community is a verified digital education initiative.</p>
+    <p>Myle Community is a verified digital initiative.</p>
     <p>Contact: <a href="mailto:support@mylecommunity.in">support@mylecommunity.in</a></p>
     <p><a href="https://www.instagram.com/myle_community/" target="_blank">@myle_community</a> | <a href="https://www.instagram.com/karanveersingh_24/" target="_blank">@karanveersingh_24</a></p>
   </footer>
